deployment/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: /koina
  annotations:
    internal.kpt.dev/upstream-identifier: apps/v1|Deployment|koina|koina
  name: koina
  namespace: koina
  labels:
    backstage.io/kubernetes-id: koina
    environment: prod
    team: team-hla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koina
  template:
    metadata:
      labels:
        app: koina
        backstage.io/kubernetes-id: koina
        environment: prod
        team: team-hla
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
        cloud.google.com/gke-accelerator: nvidia-tesla-t4
        cloud.google.com/gke-accelerator-count: "1"
      tolerations:
        - key: cloud.google.com/gke-spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: koina
          image: us-east4-docker.pkg.dev/koina-504021/koina/koina:baked-weights-tmt-v2
          ports:
            - name: grpc
              containerPort: 8500
              protocol: TCP
            - name: http
              containerPort: 8501
              protocol: TCP
            - name: metrics
              containerPort: 8502
              protocol: TCP
          resources:
            requests:
              cpu: "8"
              memory: 24Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: "8"
              memory: 24Gi
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
          startupProbe:
            httpGet:
              path: /v2/health/ready
              port: http
            periodSeconds: 30
            failureThreshold: 80
          readinessProbe:
            httpGet:
              path: /v2/health/ready
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v2/health/ready
              port: http
            periodSeconds: 30
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 32Gi
