deployment/app/service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /koina-svc
  annotations:
    internal.kpt.dev/upstream-identifier: v1|Service|koina|koina-svc
  labels:
    app: koina
  name: koina-svc
  namespace: koina
spec:
  ports:
    - name: grpc
      port: 8500
      protocol: TCP
      appProtocol: kubernetes.io/h2c
    - name: http
      port: 8501
      protocol: TCP
      appProtocol: http
    - name: metrics
      port: 8502
      protocol: TCP
  selector:
    app: koina
  type: LoadBalancer
