deployment/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koina
  namespace: koina
spec:
  hostnames:
    - koina-dev.broadinstitute.org # kpt-set: ${cert-name}
  parentRefs:
    - name: external-gw-01
      namespace: mcp
  rules:
    - backendRefs:
        - name: koina-svc
          port: 8501
      matches:
        - path:
            type: PathPrefix
            value: /
